--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -17,6 +17,7 @@
   <properties>
     <postgresql.version>42.6.0</postgresql.version>
     <jjwt.version>0.9.1</jjwt.version>
+    <modelmapper.version>3.1.0</modelmapper.version>
   </properties>
 
   <dependencies>
@@ -55,6 +56,12 @@
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt</artifactId>
       <version>${jjwt.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.modelmapper</groupId>
+      <artifactId>modelmapper</artifactId>
+      <version>${modelmapper.version}</version>
     </dependency>
 
     <dependency>
