--- a/telegram-bot/pom.xml
+++ b/telegram-bot/pom.xml
@@ -16,6 +16,7 @@
 
   <properties>
     <telegrambots.version>6.5.0</telegrambots.version>
+    <rxjava.version>3.1.6</rxjava.version>
   </properties>
 
   <dependencies>
@@ -51,6 +52,12 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
+    </dependency>
+
+    <dependency>
+      <groupId>io.reactivex.rxjava3</groupId>
+      <artifactId>rxjava</artifactId>
+      <version>${rxjava.version}</version>
     </dependency>
 
     <dependency>
